--- a/profil.html
+++ b/profil.html
@@ -17,7 +17,7 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="profil.html" class="active">Profil</a></li>
+                    <li><a href="profil.html">Profil</a></li>
                     <li><a href="#">Produk <i class="fas fa-chevron-down"></i></a>
                         <ul>
                             <li><a href="JBL.html">JBL</a></li>
@@ -26,7 +26,10 @@
                             <li><a href="wilson audio.html">WILSON AUDIO</a></li>
                         </ul>
                     </li>
-                    <li><a href="kontak.html">Kontak Kami</a></li>
+                    <li><a href="mitra.html">Mitra</a></li>
+                    <li><a href="kredit.html">Kredit</a></li>
+                    <li><a href="service.html">Service Center</a></li>
+                    <li><a href="kontak.html" class="active">Kontak Kami</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -34,10 +37,6 @@
                     <input type="search" id="search-input" placeholder="Cari produk..." required>
                     <button type="submit"><i class="fas fa-search"></i></button>
                 </form>
-                <a href="#" class="cart-icon">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span class="cart-badge">3</span>
-                </a>
             </div>
         </div>
     </header>
