--- a/profil.html
+++ b/profil.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Copyright &copy; 2025 by STORE SPEAKER | All Rights Reserved</p>
+                <p>Copyright &copy; 2025 by RAA-IF1 | All Rights Reserved</p>
             </div>
         </div>
     </footer>
